# SimuladorSO

./: COMPARACAO.md  ESCALABILIDADE.md  README.md  demo.py  escalonador.py  main.py  metrics.py  multilevel_scheduler.py  multilevel_scheduler_otimizado.py  process.py  process_loader.py  pyproject.toml  scheduler.py  test_escalabilidade.py  test_scheduler.py  teste_comparativo.py  teste_conformidade.py  teste_simples.py  tests.py  validator.py
examples/: complex_example.json  input_example.json
src/simulador_so/: __init__.py  cli.py  engine.py  models.py
src/simulador_so.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simulador_so/scheduler/: mlfq.py
test_files/: test_complex.json  test_processes.csv  test_processes.json  test_processes.txt
tests/: test_io_and_multiple_bursts.py  test_smoke.py
