[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulador-so"
version = "0.1.0"
description = "Simulador de escalonamento MLFQ (TP1)"
requires-python = ">=3.10"
authors = [{name = "Equipe TP1"}]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"


